production/pid-manager/handle-manager-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dissco-handle-manager-handle
  labels:
    app: dissco-handle-manager-handle
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dissco-handle-manager-handle
  template:
    metadata:
      labels:
        app: dissco-handle-manager-handle
        language: java
    spec:
      automountServiceAccountToken: false
      containers:
        - name: dissco-handle-manager-handle
          image: public.ecr.aws/dissco/handle-manager:sha-03bdd88   # Jan-26-2026
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "500Mi"
              cpu: "200m"
            limits:
              memory: "500Mi"
              cpu: "500m"
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 120
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 30
            failureThreshold: 6
            periodSeconds: 10
          securityContext:
            runAsNonRoot: true
            allowPrivilegeEscalation: false
