production/pid-manager/pid-manager-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dissco-pid-manager-handle-deployment
  labels:
    app: dissco-pid-manager-handle-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dissco-pid-manager
  template:
    metadata:
      labels:
        app: dissco-pid-manager
        language: java
      annotations:
        co.elastic.logs/multiline.pattern: '^[[:space:]]+(at|\.{3})[[:space:]]+\b|^Caused by:'
        co.elastic.logs/multiline.negate: "false"
        co.elastic.logs/multiline.match: after
    spec:
      automountServiceAccountToken: false
      containers:
        - name: dissco-pid-manager-handle
          image: public.ecr.aws/dissco/handle-manager:sha-8c10914
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "500Mi"
              cpu: "200m"
            limits:
              memory: "500Mi"
              cpu: "500m"
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 45
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 45
            failureThreshold: 2
          securityContext:
            runAsNonRoot: true
            allowPrivilegeEscalation: false
