production/pid-manager/doi-manager-route.yaml
apiVersion: v1
kind: Service
metadata:
  name: dissco-handle-manager-service-doi
spec:
  selector:
    app: dissco-handle-manager-doi
  ports:
    - protocol: TCP
      port: 8080
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dissco-handle-manager-doi-route
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`api.dissco.eu`) && PathPrefix(`/doi/v1`)
      kind: Rule
      services:
        - name: dissco-handle-manager-service-doi
          namespace: default
          port: 8080
      middlewares:
        - name: dissco-handle-manager-doi-stripprefix
    - match: Host(`api.dissco.eu`) && PathPrefix(`/doi-manager`)
      kind: Rule
      services:
        - name: dissco-handle-manager-service-doi
          namespace: default
          port: 8080
      middlewares:
        - name: dissco-handle-manager-doi-health-stripprefix
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: dissco-handle-manager-doi-stripprefix
spec:
  stripPrefix:
    prefixes:
      - /doi/v1
    forceSlash: false
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: dissco-handle-manager-doi-health-stripprefix
spec:
  stripPrefix:
    prefixes:
      - /doi-manager
    forceSlash: false
