production/pid-manager/handle-manager-route.yaml
apiVersion: v1
kind: Service
metadata:
  name: dissco-handle-manager-service-handle
spec:
  selector:
    app: dissco-handle-manager-handle
  ports:
    - protocol: TCP
      port: 8080
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dissco-handle-manager-handle-route
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match:  Host(`api.dissco.eu`) && PathPrefix(`/handle/v1`)
      kind: Rule
      services:
        - name: dissco-handle-manager-service-handle
          namespace: default
          port: 8080
      middlewares:
        - name: dissco-handle-manager-handle-stripprefix
    - match: Host(`api.dissco.eu`) && PathPrefix(`/handle-manager`)
      kind: Rule
      services:
        - name: dissco-handle-manager-service-handle
          namespace: default
          port: 8080
      middlewares:
        - name: dissco-handle-manager-handle-health-stripprefix
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: dissco-handle-manager-handle-stripprefix
spec:
  stripPrefix:
    prefixes:
      - /handle/v1
    forceSlash: false
---
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: dissco-handle-manager-handle-health-stripprefix
spec:
  stripPrefix:
    prefixes:
      - /handle-manager
    forceSlash: false
